--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,10 +37,10 @@ jobs:
       - name: Install libduckdb
         run: |
           mkdir /tmp/duckdb
-          mkdir -p /usr/local/duckdb/lib
-          mkdir -p /usr/local/duckdb/include
+          sudo mkdir -p /usr/local/duckdb/lib
+          sudo mkdir -p /usr/local/duckdb/include
           wget -nv -O /tmp/duckdk.zip https://github.com/duckdb/duckdb/releases/download/v1.0.0/libduckdb-linux-amd64.zip
           unzip /tmp/duckdk.zip -d /tmp/duckdb
-          mv /tmp/duckdb/lib* /usr/local/duckdb/lib/
-          mv /tmp/duckdb/*.h /tmp/duckdb/*.hpp /usr/local/duckdb/include/
+          sudo mv /tmp/duckdb/lib* /usr/local/duckdb/lib/
+          sudo mv /tmp/duckdb/*.h /tmp/duckdb/*.hpp /usr/local/duckdb/include/
       - run: zig build test-all -Dduckdb_prefix=/usr/local -Dzmq_prefix=/usr --verbose
