--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,8 @@
-name: Unit Tests
+name: Build zig-omelet
 
 on:
   push:
     branches: [ "main" ]
-    # tags: [ 'v*.*.*' ]
-    
   pull_request:
     branches: [ "main" ]
 
@@ -14,34 +12,38 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+
     permissions:
       contents: read
       packages: write
-      # This is used to complete the identity challenge
-      # with sigstore/fulcio when running outside of PRs.
-      id-token: write
+
+    container:
+      image: duckdb-by-clang:latest
+      options: |
+        --network host
+      # --privileged
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
           submodules: recursive
+
+      - name: Install build package
+        run: |
+          echo "> packages..."
+          # brew install catch2
+          # brew install duckdb
+          brew install zeromq
+
       - name: Install zig latest
         uses: mlugg/setup-zig@v1
-      - name: Install libzmq
+        with:
+          use-cache: false
+          
+      - name: Run test
         run: |
-          sudo apt update && sudo apt -y install libzmq3-dev
-      - name: Install libduckdb
-        run: |
-          mkdir /tmp/duckdb
-          sudo mkdir -p /usr/local/duckdb/lib
-          sudo mkdir -p /usr/local/duckdb/include
-          wget -nv -O /tmp/duckdk.zip https://github.com/duckdb/duckdb/releases/download/v1.0.0/libduckdb-linux-amd64.zip
-          unzip /tmp/duckdk.zip -d /tmp/duckdb
-          sudo mv /tmp/duckdb/lib* /usr/local/duckdb/lib/
-          sudo mv /tmp/duckdb/*.h /tmp/duckdb/*.hpp /usr/local/duckdb/include/
-      - name: Install libcatch2
-        run: sudo apt-get -y install catch2
-      - run: zig build test-all -Dduckdb_prefix=/usr/local -Dzmq_prefix=/usr --verbose
+          BREW_HOME=/home/linuxbrew/.linuxbrew/opt
+          zig build test -D"duckdb_prefix=/home/linuxbrew/duckdb" -D"zmq_prefix=$BREW_HOME/zeromq" -D"catch2_prefix=/home/linuxbrew/catch2" --verbose
+          # zig build -D"duckdb_prefix=/home/linuxbrew/duckdb/_install" -D"zmq_prefix=$BREW_HOME/zeromq" -D"catch2_prefix=/home/linuxbrew/catch2" --verbose
