--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -36,11 +36,14 @@ jobs:
           download_url: "/archive/refs/tags/v{{version}}.tar.gz"
           version: "2.46.0"
 
-      - name: Check git
+      - name: Add PATH to git
         run: |
           echo "path = ${{ steps.install-git.outputs.path }}"
           echo "versuion = ${{ steps.install-git.outputs.version }}"
           echo "${{ steps.install-git.outputs.path }}/bin" >> $GITHUB_PATH
+      - name: Check git version
+        run: |
+          echo git --version
 
       - name: Checkout repository
         uses: actions/checkout@v3
