--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install git
         run: |
           apt-get update
-          apt-get install -y git xz
+          apt-get install -y git xz-utils
 
           echo "${{ steps.install-git.outputs.path }}" >> $GITHUB_PATH
       - name: Check git version
