環境変数GITHUB_PATHを削除してしまっていたので戻した

--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           apt-get update
           apt-get install -y git xz-utils
+          echo "${{ steps.install-git.outputs.path }}" >> $GITHUB_PATH
       - name: Check git version
         run: |
           git --version
